stderr
JudgeMan.java:19: error: reached end of file while parsing
}
 ^
1 error
